<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false">

        <ImageView
            android:id="@+id/imgViewHomeLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="31dp"
            app:srcCompat="@drawable/logo_mdan"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textViewHomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_below="@id/imgViewHomeLogo"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textViewHomeTitleLabel"
            style="@style/BrandBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:text="@string/home_long_mdan"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#333333"
            android:textSize="16sp"
            android:layout_below="@id/textViewHomeTitle"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textViewHomeTitleAxs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textViewHomeTitleLabel"
            android:layout_marginTop="25dp"
            android:text="@string/home_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14sp"
            android:paddingLeft="20sp"
            android:paddingRight="15sp"
            android:paddingEnd="@dimen/medium_margin"
            android:paddingStart="@dimen/medium_margin" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/textViewHomeTitleAxs"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:id="@+id/home_criteria_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:importantForAccessibility="yes"
                android:contentDescription="@string/home_section_criteria_cd"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/home_tiles_selector">

                <ImageView
                    android:id="@+id/imgButtonCriteria"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/icon_guid_android" />

                <TextView
                    android:id="@+id/textViewGuidelinesAndroid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/home_section_criteria"
                    android:gravity="center"
                    style="@style/BrandBody1"
                    android:importantForAccessibility="no"
                    android:textColor="@color/home_vector_selector"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_dev_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:importantForAccessibility="yes"
                android:contentDescription="@string/home_section_dev_cd"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/home_tiles_selector">

                <ImageView
                    android:id="@+id/imgButtonDev"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/icon_guid_dev" />

                <TextView
                    android:id="@+id/textViewDev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/home_section_dev"
                    android:gravity="center"
                    style="@style/BrandBody1"
                    android:importantForAccessibility="no"
                    android:textColor="@color/home_vector_selector"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="25dp"
            android:layout_below="@id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:id="@+id/home_talkback_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:importantForAccessibility="yes"
                android:contentDescription="@string/home_section_talkback_cd"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/home_tiles_selector">

                <ImageView
                    android:id="@+id/imgButtonTalkBack"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/icon_talkback" />

                <TextView
                    android:id="@+id/textViewTalkBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/home_section_talkback"
                    android:gravity="center"
                    style="@style/BrandBody1"
                    android:importantForAccessibility="no"
                    android:textColor="@color/home_vector_selector"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_options_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:importantForAccessibility="yes"
                android:contentDescription="@string/home_section_options_cd"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/home_tiles_selector">

                <ImageView
                    android:id="@+id/imgButtonOptions"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/icon_settings" />

                <TextView
                    android:id="@+id/textViewOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:text="@string/home_section_options"
                    android:gravity="center"
                    style="@style/BrandBody1"
                    android:importantForAccessibility="no"
                    android:textColor="@color/home_vector_selector"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>