<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<!-- A DrawerLayout is intended to be used as the top-level mTxtViewContentAbout view using match_parent for both width and height to consume the full space available. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:importantForAccessibility="no"
            android:minHeight="?attr/actionBarSize"
            android:touchscreenBlocksFocus="false"
            app:theme="@style/ToolBar.style"
            app:titleTextAppearance="@style/ToolBar.title" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/my_toolbar"
            android:layout_above="@+id/buttonsView"
            android:importantForAccessibility="yes" />


        <LinearLayout
            android:id="@id/buttonsView"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="1">

                <Button
                    android:id="@+id/buttonPrevious"
                    android:background="@drawable/tuto_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/previous"
                    android:onClick="previous"
                    android:textColor="@color/button_white_selector"
                    android:focusable="true" />

                <Button
                    android:id="@+id/buttonNext"
                    android:background="@drawable/tuto_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/next"
                    android:onClick="next"
                    android:textColor="@color/button_white_selector"
                    android:focusable="true" />

        </LinearLayout>
</RelativeLayout>
