...


    <!-- @todo : remove it before release -->
    <string name="title_content">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</string>

    <!-- commons -->
    <string name="alert_before_leaving">Attention, vous quittez l\'application.\nVoulez-vous continuer ?</string>
    <string name="selected">sélectionné</string>
    <string name="not">non</string>
    <string name="on">sur</string>
    <string name="promotion">promotion</string>
    <string name="image">image</string>
    <string name="step">étape </string>
...


    <!-- Talkback view -->
    <string name="tb_what_title">À quoi ça sert?</string>
    <string name="tb_talkback_btn">Activer TalkBack</string>
    <string name="tb_how_title">Comment s\'en servir ?</string>
    <string name="tb_moves_btn">Voir tous les gestes</string>
    <string name="tb_tuto_title">Les gestes</string>
    <string name="tb_tuto_close">Fermer le tutoriel</string>
    <string name="tb_links_title">Liens</string>
    <string name="tb_what_description">TalkBack est un lecteur d\'écran intégré à Android qui décrit à haute voix les éléments qui apparaissent sur l\'écran du téléphone.\n\nIl est gratuit et permet à un utilisateur non ou mal voyant, dyslexique ou illettré de pouvoir vocaliser tous les éléments visibles contenus dans la page. Un outil comme TalkBack est appelé indifféremment lecteur d\'écran ou s
    <string name="tb_how_description">Lorsque TalkBack est activé, les gestes standard effectués sur l\'écran tactile donnent des résultats différents.\nEn outre, des gestes supplémentaires permettent de déplacer son focus à l\'écran et de contrôler les éléments sélectionnés.\n\nTalkBack comprend des gestes de toucher et de balayage à un, deux et trois doigts. Nous décrivons ici les gestes de base
    <string name="tb_talkbackgesture1"><b>Se déplacer avec un doigt sur l\'écran</b></string>
    <string name="tb_talkbackgesture1_sub">Explorer l\'écran et entendre la vocalisation de l\'élément qui est touché</string>
    <string name="tb_talkbackgesture2"><b>Double-cliquer n\'importe où sur l\'écran</b></string>
...
