...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialogButtonCancel"
        android:text="@string/alert_choice"
        android:textSize="@dimen/font_size_extra_small"
        android:gravity="left"
        android:id="@+id/choice"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingLeft="10dp"
        android:button="@drawable/checkbox_bg_selector"
        android:foreground="@drawable/foregroundselector"/>
...
